search: Fix cutoff focus outline.

--- a/web/styles/search.css
+++ b/web/styles/search.css
@@ -52,6 +52,10 @@
             opacity: 1;
         }
 
+        &:focus-visible {
+            outline-offset: -3px;
+        }
+
         &:disabled {
             visibility: hidden;
         }
